# a3-paa

./: Cargo.toml  Justfile  README.md
a3-paa/: Cargo.toml
a3-paa/src/: cfgfile.rs  decode.rs  encode.rs  lib.rs  mipmap.rs  pixel.rs
examples/: paatool.rs  readpaa.rs
examples/paatool/: decode.rs  encode.rs  info.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mipmap.rs  read_image.rs  rle_compression.rs  tagg.rs
paatool/: Cargo.toml
paatool/src/: dds2paa.rs  decode.rs  dump_mipmap.rs  encode.rs  info.rs  main.rs
src/: encode.rs  imageops.rs  lib.rs  macros.rs  mipmap.rs  pixconv.rs
