[package]
edition = "2021"
name = "a3-paa"
version = "0.0.1-dev"
description = "Read and write the Bohemia Interactive PAA image format"
rust-version = "1.56"

[dependencies]
log = "0.4.14"
static_assertions = "1.1.0"
derive_more = "0.99.17"
deku = "0.13.0"
byteorder = "1.4.3"
libc = "0.2.119"
bstr = "0.2.17"
segvec = "0.1.5"
minilzo-rs = "0.6.0"
image = "0.24.1"
squish = "2.0.0-beta1"

[dependencies.bohemia-compression]
git = "https://github.com/IrregularElements/bohemia-compression.git"
rev = "18cfdedfa530ea4d5468154a1c2210445bd751e2"

[dev-dependencies]
anyhow = { version = "1.0.55", features = ["backtrace"] }
fern = "0.6.0"
chrono = "0.4.19"
clap = { version = "3.1.5", features = ["cargo"] }

[[example]]
name = "paatool"
required-features = ["anyhow/backtrace", "clap/cargo"]
