[package]
edition = "2021"
name = "a3-paa"
version = "0.0.1-dev"
description = "Read and write the Bohemia Interactive PAA image format"
rust-version = "1.56"

[features]
default = []
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.1.0", features = ["derive"], optional = true } # impl Arbitrary for fuzzing
bstr = "0.2.17" # [TODO] PROCTAGG text
byteorder = "1.4.3" # Read little-endian PAA data
deku = "0.15.0" # derive(DekuRead, DekuWrite) for PAA structures
derive_more = "0.99.17" # derive(Display, Error)
enum-utils = "0.1.2" # derive(FromStr)
image = "0.24.1" # Read and write common image formats
log = { version = "0.4.16", optional = true }
minilzo-rs = "0.6.0" # Read and write LZO-compressed DXTn textures
nom = "7.1.1" # Parse TexConvert.cfg
static_assertions = "1.1.0" # [TODO]
tap = "1.0.1" # Convenience extension methods on monadic types
texpresso = "2.0.1" # Read and write DXTn textures
unicode-xid = "0.2.2" # [TODO] Parse identifiers in TexConvert.cfg

[dependencies.surety]
git = "https://github.com/myrrlyn/surety.git"
rev = "bab3b93109417a5da76eccf0378a42dbeb79e9d2"

[dependencies.bohemia-compression]
git = "https://github.com/IrregularElements/bohemia-compression.git"
rev = "23afce3e4e3a55eb448380e9a60a35bf1a1afd1b"

[dev-dependencies]
anyhow = { version = "1.0.55", features = ["backtrace"] }
chrono = "0.4.19"
clap = { version = "3.1.5", features = ["cargo"] }
fern = "0.6.0"
log = "0.4.16"
wild = "2.0.4"

[[example]]
name = "paatool"
required-features = ["anyhow/backtrace", "clap/cargo"]
