[package]
edition = "2021"
name = "paatool"
version = "1.0.0"
description = "Read and write the Bohemia Interactive PAA image format"
rust-version = "1.63"

[dependencies]
a3-paa = { path = "../a3-paa" }
anyhow = { version = "1.0.61", features = ["backtrace"] }
byteorder = "1.4.3"
clap = { version = "3.1.5", features = ["cargo"] }
ddsfile = "0.5.1"
image = "0.24.1"
steamlocate = "1.1.0"
tap = "1.0.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
wild = "2.0.4"
